Bug 151519 - LibreOffice Writer Ruler (set to inches) won't display sub-inch tick-marks.
Summary: LibreOffice Writer Ruler (set to inches) won't display sub-inch tick-marks.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-14 00:02 UTC by Gary Frankenbery
Modified: 2022-11-09 20:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
rulers shown for writer version 6.4.7.2 and writer version 7.4.1.2 (17.74 KB, image/png)
2022-10-14 00:02 UTC, Gary Frankenbery
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gary Frankenbery 2022-10-14 00:02:11 UTC
Created attachment 183033 [details]
rulers shown for writer version 6.4.7.2 and writer version 7.4.1.2

It works properly in Writer version 6.4.7.2 but not for writer version 7.4.1.2, and makes it difficult to properly set tabs visually by dragging the tab marks on the ruler.
Comment 1 Rafael Lima 2022-10-14 14:20:32 UTC
Apparently the tick marks are there, but they're white.

What OS are you using? Are you using a dark theme in your OS?
Comment 2 Gary Frankenbery 2022-10-16 06:27:25 UTC
Linux KDE Neon (Ubuntu based with KDE Plasma version 5.26.0)
No, I'm not using a dark theme.

It works fine with Writer 6.4.7.2, but not with Writer 7.4.1.2.
Comment 3 Rafael Lima 2022-10-18 16:42:14 UTC
Indeed they are not being drawn with the right color.

I'm setting this to NEW.

Code pointer:
https://opengrok.libreoffice.org/xref/core/svtools/source/control/ruler.cxx?r=3901e029#418
Comment 4 Rafael Lima 2022-10-18 16:53:15 UTC
Patch available for review at:

https://gerrit.libreoffice.org/c/core/+/141407
Comment 5 Commit Notification 2022-11-09 15:08:05 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aa8a8b36b73304431bacd7ed0f8803de8dfffe3e

tdf#151519 Make ticks in ruler visible again

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-11-09 20:10:07 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2e9122f79b2573647a77bdfb2216934a5abda778

tdf#151519 Make ticks in ruler visible again

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.