tdf#151519 Make ticks in ruler visible again

As reported by the user, the ticks in the ruler are no longer visible. This patch draws them using the shadow color.

Tested with: gen, gtk3 and kf5

Change-Id: Ie80255544b88adfc331fac1365ce381dd90187cd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141407
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit aa8a8b36b73304431bacd7ed0f8803de8dfffe3e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142448
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>